--- a/getSyntax/Base.lproj/Main.storyboard
+++ b/getSyntax/Base.lproj/Main.storyboard
@@ -1,104 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zse-Ca-0Ja">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dQV-aM-ydf">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--Compare-->
-        <scene sceneID="uvt-Js-MQg">
-            <objects>
-                <viewController id="gVe-Cf-DKI" customClass="CompareViewController" customModule="getSyntax" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="sNT-9U-HcN"/>
-                        <viewControllerLayoutGuide type="bottom" id="qt5-ZJ-fta"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="nFR-0Z-NvF">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hp1-Zk-FPU">
-                                <rect key="frame" x="172" y="11" width="124" height="162"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="162" y="11" width="147" height="162"/>
-                                </variation>
-                            </pickerView>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nyt-eo-Zsh">
-                                <rect key="frame" x="99" y="158" width="128" height="162"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="158" width="293" height="162"/>
-                                </variation>
-                            </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h8F-4p-aQs">
-                                <rect key="frame" x="114" y="328" width="98" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" title="Compare">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="107" y="347" width="98" height="41"/>
-                                </variation>
-                                <connections>
-                                    <action selector="compareButton:" destination="gVe-Cf-DKI" eventType="touchUpInside" id="lM9-WM-YrD"/>
-                                </connections>
-                            </button>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZkX-Lx-tkg">
-                                <rect key="frame" x="16" y="11" width="139" height="162"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="15" y="11" width="139" height="162"/>
-                                </variation>
-                            </pickerView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="0.84509014553912609" blue="0.68431187834230456" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Compare" image="file-two-7.png" id="f8h-Ns-W4i"/>
-                    <connections>
-                        <outlet property="firstLanguage" destination="ZkX-Lx-tkg" id="He6-UT-rUB"/>
-                        <outlet property="secondLanguage" destination="Hp1-Zk-FPU" id="vJ5-hu-QWv"/>
-                        <outlet property="statementPicker" destination="nyt-eo-Zsh" id="H0Q-pY-uIV"/>
-                        <segue destination="ZG0-7l-GBS" kind="show" identifier="compareSegue" id="udJ-VA-Exu"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ne9-FO-5ad" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1087.5" y="-483.75"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="p6O-2R-m07">
-            <objects>
-                <viewController id="ZG0-7l-GBS" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Dzo-jX-p2L"/>
-                        <viewControllerLayoutGuide type="bottom" id="hFK-Mr-siQ"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="1pj-Pw-2X6">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AjJ-Ku-nqn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1899" y="-483.75"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="mQi-cV-g8U">
-            <objects>
-                <tabBarController id="zse-Ca-0Ja" sceneMemberID="viewController">
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="dhY-I7-Pxf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="dQV-aM-ydf" kind="relationship" relationship="viewControllers" id="nxI-yy-3JN"/>
-                        <segue destination="gVe-Cf-DKI" kind="relationship" relationship="viewControllers" id="pKq-vw-3IN"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6ki-Td-w2x" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="273" y="-26.25"/>
-        </scene>
         <!--getSyntax-->
         <scene sceneID="cF8-Yq-SnY">
             <objects>
@@ -197,6 +102,5 @@
     </scenes>
     <resources>
         <image name="allLanguages.png" width="30" height="30"/>
-        <image name="file-two-7.png" width="30" height="30"/>
     </resources>
 </document>
